# MicroRenderer

./: CMakeLists.txt  LICENSE.txt  README.md
AssetConverters/: ModelConversionTemplate.ini  convert_3d_model.py  convert_texture.py
AssetConverters/ModelConversions/: ConversionTemplate.ini  GouraudTextured.ini  SimpleContours.ini  UnlitTextured.ini
AssetConverters/TextureConversions/: ConversionTemplate.ini  RGB444.ini  RGB565.ini  RGBA4444.ini
assets/models/: cube.h  cube_old.h  rasterization_test.h
assets/models/GouraudTextured/: cube.h  plane.h
assets/models/SimpleContours/: cube.h  tu_vienna_logo.h
assets/models/UnlitTextured/: cube.h  plane.h
assets/textures/: color_grid_texture.h  tu_logo_texture.h
assets/textures/RGB444/: color_grid_texture.h  tu_logo_texture.h
assets/textures/RGB565/: color_grid_texture.h  tu_logo_texture.h
assets/textures/RGB888/: color_grid_texture.h  tu_logo_texture.h
assets/textures/RGBA4444/: color_grid_texture.h  tu_logo_texture.h
demo/: 3d_freefly_viewer.cpp
include/MicroRenderer/: MicroRenderer.h
include/MicroRenderer/Core/: Framebuffer.h  Framebuffer.tpp  Renderer.h  Renderer.tpp
include/MicroRenderer/Core/Shading/: FragmentShader.h  ShaderConfiguration.h  ShaderInterface.h  ShaderProgram.h  TriangleAssembler.h  VertexShader.h
include/MicroRenderer/Core/Textures/: Texture2D.h  Texture2D.tpp  TextureConfiguration.h  TextureTypes.h
include/MicroRenderer/Math/: Interpolation.h  Matrix3.h  Matrix4.h  ScalarTypes.h  Transform.h  Transform.tpp  Utility.h  Vector2.h  Vector3.h  Vector4.h
include/MicroRenderer/Shaders/: BaseShader.h
include/MicroRenderer/Shaders/CustomShader/: CustomFragmentShader.h  CustomShaderInterface.h  CustomShaderProgram.h  CustomTriangleAssembler.h  CustomVertexShader.h
include/MicroRenderer/Shaders/SimpleContours/: SimpleContoursFragmentShader.h  SimpleContoursShaderInterface.h  SimpleContoursShaderProgram.h  SimpleContoursTriangleAssembler.h  SimpleContoursVertexShader.h
include/MicroRenderer/Shaders/UnlitVertexColor/: UVCFragmentShader.h  UVCShaderInterface.h  UVCShaderProgram.h  UVCTriangleAssembler.h  UVCVertexShader.h
include/MicroRenderer/Shading/: FragmentShader.h  ShaderConfiguration.h  ShaderInterface.h  ShaderProgram.h  TriangleAssembler.h  VertexShader.h
include/MicroRenderer/Textures/: Texture2D.h  Texture2D.tpp
shaders/CustomShader/: CustomFragmentShader.h  CustomShaderInterface.h  CustomShaderProgram.h  CustomTriangleAssembler.h  CustomVertexShader.h
shaders/GouraudTextured/: GouraudTexturedFragmentShader.h  GouraudTexturedShaderInterface.h  GouraudTexturedShaderProgram.h  GouraudTexturedTriangleAssembler.h  GouraudTexturedVertexShader.h
shaders/SimpleContours/: SimpleContoursFragmentShader.h  SimpleContoursShaderInterface.h  SimpleContoursShaderProgram.h  SimpleContoursTriangleAssembler.h  SimpleContoursVertexShader.h
shaders/UnlitTextured/: UnlitTexturedFragmentShader.h  UnlitTexturedShaderInterface.h  UnlitTexturedShaderProgram.h  UnlitTexturedTriangleAssembler.h  UnlitTexturedVertexShader.h
src/Core/: Framebuffer.cpp  Renderer.cpp
src/Math/: Transform.cpp
test/: 3d_freefly_viewer.cpp  main.cpp  ppm_image_saver.cpp
